# bachelor-thesis-vehicle-engineering

./: LICENSE  README.md  pyproject.toml
.gitignore/: ignore.txt
data/data/raw/: MapData_Glado1.m  MapData_Glado1.py  MapData_NewLocation.gpx  MapData_NewLocation_GML.gpx
src/Model/: params.yaml  params_optpimization.py  run.py  run_optimization_algo.py
src/Model/bike_energy/: config.py  controller.py  free_rolling.py  power_models.py  simulator.py  speed_control.py
src/Model/bike_energy.egg-info/: PKG-INFO  requires.txt
src/bike_energy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/src/Model/: README.md  READMEold.md  params.yaml  params_optpimization.py  pyproject.toml  pyprojectold.toml  requirements.txt  run.py  run_optimization.py  översikt.txt
src/src/Model/bike_energy/: __init__.py  config.py  controller.py  free_rolling.py  map_data.py  power_models.py  simulator.py  speed_control.py
src/src/Model/bike_energy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/src/Optimeringsalgoritm/: optimeringsproblem v2.py  optimeringsproblem.py
src/src/OptimeringsalgoritmOLD/: FreeRollingSlope.py  NUMBA_BikeEnergyModelOPT.py  PowerInputOn.py  SpeedReductionCausedByCrossRoads.py  SpeedReductionCausedByHighLatAcc.py
src/src/python/: test.py
src/src/python/FINALVERISON_WORKS w Optimizationalgo/: BikeEnergyModelFINAL_w_ALGO.py  BikeEnergyOptimizedV2.py  ControllerOPT.py  FreeRollingSlope.py  IMPLEM.py  OptimizationAlgo.py  PowerInputOff.py  PowerInputOn.py  SpeedReductionCausedByCrossRoads.py  SpeedReductionCausedByHighLatAcc.py  test_one_comb.py
(+45 files in other folders)
